frontend and documentation changes

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ datetime
 numpy
 scikit-learn
 textblob
+pyPDF2 # newly added library for conversion of zip of pdfs to folder of extracted text files
+streamlit
+jupyter 
