--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,4 @@ textblob
 pyPDF2 # newly added library for conversion of zip of pdfs to folder of extracted text files
 streamlit
 jupyter 
+en-core-web-sm
