--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,10 @@ pandas
 spacy
 language_tool_python
 datetime
-numpy
+numpy==2.3.2
 scikit-learn
 textblob
 pyPDF2 # newly added library for conversion of zip of pdfs to folder of extracted text files
 streamlit
 jupyter 
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
